--- a/index.html
+++ b/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <!-- Google tag (gtag.js) -->
+  <!-- Google tag (gtag.js) – EINMAL einbinden -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYC6CW876P"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-  
-    gtag('config', 'G-CYC6CW876P');
-  </script>
 
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17005180128"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
+    // GA4-Konfiguration
+    gtag('config', 'G-CYC6CW876P');
+
+    // Google Ads Conversion-Tracking
     gtag('config', 'AW-17005180128');
   </script>
   
