--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <!-- Google tag (gtag.js) – EINMAL einbinden -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYC6CW876P"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -22,5 +22,7 @@
 <body>
   <h1>Testseite für Traffic</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
+  <!-- Button für Conversion -->
+  <button onclick="gtag('event', 'conversion', {'send_to': 'AW-17005180128/YYYYYYYYYY'});">Kontakt</button>
 </body>
 </html>
