--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
   <h1>Testseite für Traffic</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
-  <button onclick="gtag('event', 'conversion', {'send_to': 'AW-17005180128/rfrbCKnvzLkaEODp2aw_'});">Kontakt</button>
+  <button onclick="gtag('event', 'conversion', {
+    'send_to': 'AW-17005180128/rfrbCKnvzLkaEODp2aw_',
+    'value': 1000.0,  // Beispiel: Wert der Conversion
+    'currency': 'EUR' // Währung
+  });">Kontakt</button>
 </body>
 </html>
