--- a/index.html
+++ b/index.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CYC6CW876P"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    // GA4-Konfiguration
-    gtag('config', 'G-CYC6CW876P');
-
-    // Google Ads Conversion-Tracking
-    gtag('config', 'AW-17005180128');
-  </script>
+  
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,10 +11,6 @@
   <h1>Testseite für Traffic</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
-  <button onclick="gtag('event', 'conversion', {
-    'send_to': 'AW-17005180128/rfrbCKnvzLkaEODp2aw_',
-    'value': 1000.0,  // Beispiel: Wert der Conversion
-    'currency': 'EUR' // Währung
-  });">Kontakt</button>
+  <button>Kontakt</button>
 </body>
 </html>
