--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Testseite für Traffic neu</title>
+  <title>Testseite für Traffic</title>
 </head>
 <body>
-  <h1>Testseite für Traffic</h1>
+  <h1>Testseite für Traffic neu</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
   <button>Kontakt</button>
