--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
   <h1>Testseite für Traffic</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
-  <button id="contact-button" onclick="gtag_report_conversion('/kontakt')">Kontakt aber zackzack</button>
+  <button id="contact-button" onclick="gtag_report_conversion('/test-website/')">Kontakt aber zackzack</button>
 </body>
 </html>
