--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
   <title>Testseite für Traffic</title>
 </head>
 <body>
-  <h1>Testseite für Traffic next try</h1>
+  <h1>Testseite für Traffic und Google Ads</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
-  <button onclick="gtag_report_conversion('/')">Kontakt aber zackzack</button>
+  <button onclick="gtag_report_conversion('')">Kontakt aber zackzack</button>
 </body>
 </html>
