--- a/index.html
+++ b/index.html
@@ -11,25 +11,6 @@
     gtag('config', 'G-CYC6CW876P');
   </script>
 
-  <!-- Event snippet for Button Klick conversion page
-  In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-  <script>
-    function gtag_report_conversion(url) {
-      var callback = function () {
-        if (typeof(url) != 'undefined') {
-          window.location = url;
-        }
-      };
-      gtag('event', 'conversion', {
-          'send_to': 'AW-17005180128/rfrbCKnvzLkaEODp2aw_',
-          'value': 1000.0,
-          'currency': 'EUR',
-          'event_callback': callback
-      });
-      return false;
-    }
-  </script>
-
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,6 +20,7 @@
   <h1>Testseite für Traffic und Google Ads</h1>
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
-  <button onclick="gtag_report_conversion('')">Kontakt aber zackzack</button>
+  <!-- onclick="gtag_report_conversion('')" -->
+  <button> Kontakt aber zackzack </button>
 </body>
 </html>
