--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   <p>Dies ist eine einfache Seite, um Website-Traffic in GA4 zu testen.</p>
   <!-- Button für Conversion -->
   <!-- onclick="gtag_report_conversion('')" -->
-  <a onclick="return gtag_report_conversion('https://jdiller1144.github.io/test-website/');" href="https://jdiller1144.github.io/test-website/">Kontakt aber zackzack</a>
+  <a onclick="return gtag_report_conversion('https://jdiller1144.github.io/');" href="https://jdiller1144.github.io/">Kontakt aber zackzack</a>
 </body>
 </html>
