--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </style>
 </head>
 <body>
+    <iframe title="btc" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=39668c51-6862-4461-95a2-4e8c8cf7dedb&autoAuth=true&ctid=7db25319-c04d-4699-88f4-84306cdd3f56" frameborder="0" allowFullScreen="true"></iframe>
     <div class="container">
         <h1>🏷️ Code-128 Barcode Generator</h1>
         
